[package]
name = "pindash-news"
version = "0.1.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
homepage = "https://github.com/pindash-io/News"
documentation = "https://github.com/pindash-io/News"
repository = "https://github.com/pindash-io/News"
description = "pindash news - a reader, rss, pdf, etc."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["gui"]
keywords = ["egui", "gui"]
publish = false

[features]
wgpu = []

[dependencies]
anyhow = "1.0.67"
eframe = { git = "https://github.com/fundon/egui.git", rev = "a1f17237", features = [
  "wgpu",
] }
egui_extras = { git = "https://github.com/fundon/egui.git", rev = "a1f17237", features = [
  "svg",
  "image",
] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
once_cell = "1.16.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
rusqlite = { version = "0.28.0", features = ["bundled", "array", "serde_json"] }
rusqlite_migration = "1.0.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
feed-rs = "1.2.0"
chrono = { version = "0.4.23", default-features = false }
url = "2.3.1"
# egui_dnd = "0.1.0"
