[package]
name = "pindash-news"
version = "0.1.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
homepage = "https://github.com/pindash-io/News"
documentation = "https://github.com/pindash-io/News"
repository = "https://github.com/pindash-io/News"
description = "pindash news - a reader, rss, pdf, etc."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["gui"]
keywords = ["egui", "gui"]
publish = false

[features]
wgpu = []

[dependencies]
anyhow = "1.0.68"
eframe = { git = "https://github.com/fundon/egui.git", rev = "a1f17237", features = [
  "wgpu",
] }
egui_extras = { git = "https://github.com/fundon/egui.git", rev = "a1f17237", features = [
  "svg",
  "image",
] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
once_cell = "1.17.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
reqwest = { version = "0.11.13", features = ["json", "gzip", "deflate", "brotli", "trust-dns"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "sync"] }
rusqlite = { version = "0.28.0", features = ["bundled", "array", "serde_json"] }
rusqlite_migration = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# feed-rs = "1.2.0"
feed-rs = { version = "1.2.0", git = "https://github.com/fundon/feed-rs.git", rev = "5d1d126" }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
url = "2.3.1"
open = "3.2.0"
scraper = { version = "0.14.0", default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false }
ego-tree = "=0.6.2"
# egui_dnd = "0.1.0"
